--- a/Suklemin/Suklemin.csproj
+++ b/Suklemin/Suklemin.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1FE2B8AB-656C-443F-A5D6-42D12643B9B2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Suklemin</RootNamespace>
-    <AssemblyName>Suklemin</AssemblyName>
+    <AssemblyName>Мед лаборатория</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -24,7 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Suklemin.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Мед лаборатория.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
